--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -1,7 +1,7 @@
 <!-- public/partials/principal.html -->
 
 <div class="jumbotron">
-    <h1 class="text-center">Alurapic</h1>
+    <h1 class="text-center">PicsArt</h1>
 </div>
 
     <p ng-show="mensagem.length" class="alert alert-info">{{mensagem}}</p>
