modificando a DOM, diretivas, e acessando recursos

--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -30,3 +30,7 @@
     
     </meu-painel>
 </div>
+
+
+            <meus-titulos class="col-xs-3  table-responsive" style="border: 1px solid gainsboro; padding: 15px;" ></meus-titulos>
+    
